arkts_static_test/08_Statements/ets_cases/8.8_for_Statements/compile-fail/STM_08_08_007_FAIL_VAR_OUT_OF_SCOPE.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id STM_08_08_007_FAIL_VAR_OUT_OF_SCOPE
 * @expect compile-fail
 * @section 8.8
 * @design forInit 中声明的变量具有循环作用域，循环外不能访问
 * @note 反向用例：for (let i = 0; i < 10; i++) {} let x = i; 作用域越界
 */
function testVarOutOfScope(): void {
    for (let loopIdx: int = 0; loopIdx < 5; loopIdx++) {
        let dummy: int = loopIdx
    }
    let after: int = loopIdx
}
